Fix error: Combined search input content not aligned

--- a/app/assets/stylesheets/landing_page/sections/hero.scss
+++ b/app/assets/stylesheets/landing_page/sections/hero.scss
@@ -209,7 +209,7 @@
   @extend .hero__search-input;
   border-radius: 29.5px;
   margin: 0 0 12px 0;
-  padding: 8px 12px 8px 24px;
+  padding: 8px 24px 8px 24px;
 
   @media #{$hero_search-tablet} {
     padding: 8px 12px 8px 0px;
